network_infra.tf
# Here will be the main tf code for network infrastructure related resources
### TODO: pre-requisite variables should be defined in tfvars file such as:
##    - VPC CIDR blocks Transit 
##    - TGW Gateway ID 
##    - AD details (domain name, DNS IPs, etc)
## 
## This file will be configuring and creating the following resources: 
##  1- VPC1 & VPC2: VPC1 for (EVS) and VPC2 for (WorkSpaces)
##  2- VPC Peering: between VPC1 (EVS) and VPC2 (WorkSpaces)
##  3- Subnets in both VPCs
##  4- Route tables
##      a. create route tables and associations for both VPCs
##      b. add peering routes to both VPCs route tables and TGW routes for on-premises access
##  5- DHCP Options Set for both VPCs to point to AD DNS IPs
##  6- (optional) public subn for NAT Gateway in workspaces VPC
##  7- (optional) NAT Gateway in WorkSpaces VPC
##  8- TGW attachments for both VPCs

#####################################################################################
################ CREATING VPCs for the required infrastructure ######################
#####################################################################################
# TODO: update the VPC ids - remove the PVC resources when apply this in prod, PVCs should be pre-existed and has the following tags:
# TODO:  for evs-vpc --> Application="evs" and for workspaces-vpc --> Application="workspaces"
# TODO: you will only need to keep the datasources to read the existing VPC ids 
resource "aws_vpc" "evs" {
  cidr_block           = var.evs_vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge(
    {
      Application = "evs"
      Name        = "evs-vpc"
    },
    var.map_tag
  )
}

resource "aws_vpc" "workspaces" {
  cidr_block           = var.workspaces_vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge(
    {
      Application = "workspaces"
      Name        = "workspaces-vpc"
    },
    var.map_tag
  )
}

#  Data sources to read the VPC IDs -- those datassources were added to read the pre-existed VPCs in prod env in case they are not created by this code.
data "aws_vpc" "evs" {
  depends_on = [aws_vpc.evs]
  filter {
    name   = "tag:Application"
    values = ["evs"]
  }
}

data "aws_vpc" "workspaces" {
  depends_on = [aws_vpc.workspaces]
  filter {
    name   = "tag:Application"
    values = ["workspaces"]
  }
}

#####################################################################################
############################# CONFIGURING VPC PEERING CONNECTION ####################
#####################################################################################
####  Create VPC peering connection between VPC1 (EVS) and VPC2 (WorkSpaces)
resource "aws_vpc_peering_connection" "evsvpc_workspacesvpc" {
  vpc_id      = data.aws_vpc.evs.id
  peer_vpc_id = data.aws_vpc.workspaces.id
  auto_accept = true
  tags = {
    Name        = "evs-vpc--workspaces-vpc"
    Environment = var.environment
  }
}
#### Enable DNS resolution for VPC peering
resource "aws_vpc_peering_connection_options" "evsvpc_workspacesvpc" {
  vpc_peering_connection_id = aws_vpc_peering_connection.evsvpc_workspacesvpc.id
  requester {
    allow_remote_vpc_dns_resolution = true
  }
  accepter {
    allow_remote_vpc_dns_resolution = true
  }
}

#####################################################################################
########################## CONFIGURING SUBNETS ON BOTH VPCs   #######################
#####################################################################################
#### Get available AZs in the region
data "aws_availability_zones" "available" {
  state = "available"
  filter {
    name   = "region-name"
    values = ["us-west-2"]
  }
}
#### create subnets in evs-vpc and workspaces-vpc on AZ1 and AZ2
resource "aws_subnet" "evs_vpc_subnets" {
  count             = 1 # Number of subnets --> Ajust this number based on the number of subnets needed
  vpc_id            = data.aws_vpc.evs.id
  cidr_block        = cidrsubnet(var.evs_vpc_cidr, 7, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index % length(data.aws_availability_zones.available.names)]
  tags = {
    Name        = "usw2a-evs-service-access-subnet"
    application = "evs"
  }
}
resource "aws_subnet" "workspaces_vpc_subnets" {
  count             = 2
  vpc_id            = data.aws_vpc.workspaces.id
  cidr_block        = cidrsubnet(var.workspaces_vpc_cidr, 4, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index % length(data.aws_availability_zones.available.names)]
  tags = {
    Name        = "usw${substr(data.aws_availability_zones.available.names[count.index % length(data.aws_availability_zones.available.names)], -2, 2)}-workspaces-svc-subnet"
    application = "workspaces"
  }
}



#####################################################################################
###################### CONFIGURING ROUTE TABLES ON BOTH VPCs  #######################
#####################################################################################
#### ctreate route tables for EVS VPC 
resource "aws_route_table" "evs_vpc_private_rt" {
  vpc_id = data.aws_vpc.evs.id
  tags = {
    Name = "evs-main-rt"
  }
}

#### Set EVS route table as main route table
resource "aws_main_route_table_association" "evs_vpc_main" {
  vpc_id         = data.aws_vpc.evs.id
  route_table_id = aws_route_table.evs_vpc_private_rt.id
}

#### ctreate route tables for WorkSpaces VPC
resource "aws_route_table" "workspaces_vpc_private_rt" {
  vpc_id = data.aws_vpc.workspaces.id
  tags = {
    Name = "workspaces-main-rt"
  }
}


#### Associate subnets with route tables in evs voc
resource "aws_route_table_association" "evs_vpc_subnets" {
  count          = length(aws_subnet.evs_vpc_subnets)
  subnet_id      = aws_subnet.evs_vpc_subnets[count.index].id
  route_table_id = aws_route_table.evs_vpc_private_rt.id
}

#### Associate subnets with route tables in workspaces voc
resource "aws_route_table_association" "workspaces_vpc_subnets" {
  count          = length(aws_subnet.workspaces_vpc_subnets)
  subnet_id      = aws_subnet.workspaces_vpc_subnets[count.index].id
  route_table_id = aws_route_table.workspaces_vpc_private_rt.id
}



#### Add peering routes to VPC1 (EVS) route tables
resource "aws_route" "evsvpc_to_workspacesvpc" {
  route_table_id            = aws_route_table.evs_vpc_private_rt.id
  destination_cidr_block    = var.workspaces_vpc_cidr
  vpc_peering_connection_id = aws_vpc_peering_connection.evsvpc_workspacesvpc.id
}


#### Add peering routes to VPC2 (WorkSpaces) route tables
resource "aws_route" "workspacesvpc_to_evsvpc" {
  route_table_id            = aws_route_table.workspaces_vpc_private_rt.id
  destination_cidr_block    = var.evs_vpc_cidr
  vpc_peering_connection_id = aws_vpc_peering_connection.evsvpc_workspacesvpc.id
}

# #### Add TGW routes on evs vpc for on-premises access
resource "aws_route" "evsvpc_default_route" {
  route_table_id         = aws_route_table.evs_vpc_private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  transit_gateway_id     = var.transit_gateway_id
  depends_on = [
    aws_ec2_transit_gateway_vpc_attachment.evs-vpc
  ]
}

# resource "aws_route" "evsvpc_onprem_cidrs" {
#   for_each               = toset(var.on_premises_cidrs)
#   route_table_id         = aws_route_table.evs_vpc_private_rt.id
#   destination_cidr_block = each.value
#   transit_gateway_id     = var.transit_gateway_id
#   depends_on = [
#     aws_ec2_transit_gateway_vpc_attachment.evs-vpc
#   ]
# }

#### Add TGW routes on workspaces vpc for on-premises access
resource "aws_route" "workspacesvpc_default_internal_route" {
  route_table_id         = aws_route_table.workspaces_vpc_private_rt.id
  destination_cidr_block = "10.0.0.0/8"
  transit_gateway_id     = var.transit_gateway_id
  depends_on = [
    aws_ec2_transit_gateway_vpc_attachment.workspaces-vpc
  ]
}

########   WORKSPACES ROUT TO INTERNET   #############
# resource "aws_route" "workspaces_pvt_default_internet" {
#   route_table_id         = aws_route_table.workspaces_vpc_private_rt.id
#   destination_cidr_block = "0.0.0.0/0"
#   transit_gateway_id     = var.transit_gateway_id
#   depends_on = [
#     aws_ec2_transit_gateway_vpc_attachment.workspaces-vpc
#   ]
# }

#TODO: uncomment the folloing section after Asstrana team creates AD and provides the DNS IPs
#####################################################################################
###################### CONFIGURING DHCP OPTIONS ON BOTH VPCs  #######################
#####################################################################################
#### Create DHCP Options Set for workspaces VPC to point to EVS VPC AD DNS IPs
resource "aws_vpc_dhcp_options" "workspaces_vpc" {
  domain_name         = var.domain_name             # e.g., "corp.example.com"
  domain_name_servers = slice(var.ad_dns_ips, 0, 2) # AD DNS IPs in EVS VPC (first two IPs only from the list)
  ntp_servers         = slice(var.ad_dns_ips, 0, 2) # Optional: Use AD servers for NTP (first two IPs only from the list)
  tags = {
    Name        = "workspaces-vpc-dhcp-option-set"
    Environment = var.environment
    description = "DHCP options for WorkSpaces VPC for DNS on EVS VPC"
  }
}

resource "aws_vpc_dhcp_options_association" "workspaces_vpc" {
  vpc_id          = data.aws_vpc.workspaces.id
  dhcp_options_id = aws_vpc_dhcp_options.workspaces_vpc.id
}

#### Create DHCP Options Set for EVS VPC
resource "aws_vpc_dhcp_options" "evs_vpc" {
  domain_name         = var.domain_name             # Same domain
  domain_name_servers = slice(var.ad_dns_ips, 0, 2) #  AD DNS IPs in EVS VPC (first two IPs only from the list)
  ntp_servers         = slice(var.ad_dns_ips, 0, 2) # Optional: Use AD servers for NTP (first two IPs only from the list)
  tags = {
    Name        = "evs-vpc-dhcp-option-set"
    Environment = var.environment
    description = "DHCP options for EVS VPC for the local DNS on EVS VPC"
  }
}

resource "aws_vpc_dhcp_options_association" "evs_vpc" {
  vpc_id          = data.aws_vpc.evs.id
  dhcp_options_id = aws_vpc_dhcp_options.evs_vpc.id
}

#####################################################################################
######################### TRANSIT GATEWAY CONFIGURATION ##############################
#####################################################################################

# Import existing TGW attachment from evs-vpc
import {
  id = "tgw-attach-0bf0af7503aaf5f94"
  to = aws_ec2_transit_gateway_vpc_attachment.evs-vpc
}

# Create TGW VPC attachment for EVS-VPC (if it doesn't exist)
resource "aws_ec2_transit_gateway_vpc_attachment" "evs-vpc" {
  # count = length(data.aws_ec2_transit_gateway_vpc_attachments.evs.ids) == 0 ? 1 : 0
  # You'll need to provide EVS VPC TGW subnet IDs
  subnet_ids         = aws_subnet.evs_vpc_subnets[*].id
  transit_gateway_id = var.transit_gateway_id
  vpc_id             = data.aws_vpc.evs.id
  tags = merge(
    {
      Name        = "evs-vpc-tgw-Attachment"
      Environment = var.environment
    },
    var.map_tag
  )
}

# Handle state transition from count-based to direct resource
moved {
  from = aws_ec2_transit_gateway_vpc_attachment.workspaces[0]
  to   = aws_ec2_transit_gateway_vpc_attachment.workspaces-vpc
}
# Create TGW VPC attachment for workspaces-VPC
resource "aws_ec2_transit_gateway_vpc_attachment" "workspaces-vpc" {
  subnet_ids         = aws_subnet.workspaces_vpc_subnets[*].id
  transit_gateway_id = var.transit_gateway_id
  vpc_id             = data.aws_vpc.workspaces.id
  tags = merge(
    {
      Name        = "workspaces-vpc-tgw-Attachment"
      Environment = var.environment
    },
    var.map_tag
  )
}
